--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
@@ -71,6 +71,7 @@
 
             <button id="createBlockBtn" class="btn btn-success">Add Options</button>
             <button id="addInputBtn" class="btn btn-success">+</button>
+            <button id="RemoveInputBtn" class="btn btn-danger">-</button>
      
         </div>
 
@@ -106,7 +107,7 @@
 
                             <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Doppelzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
                             <td id="rowTable" class="table-info">
-                                <a class="compItem" href="@Url.Action("ProductProfil_Doppelzylinder","Home", new { item.Id })">
+                                <a class="compItem" href="@Url.Action("ProductAussenzylinder","Home", new { item.Id })">
                                     <img src="@("/Image/options.png")" height="30" width="30" />
                                 </a>
                             </td>
@@ -125,7 +126,6 @@
 {
     <script type="text/javascript">
 
-
         let sum = document.querySelectorAll('#cost');
 
         let costNGF = document.getElementById('costNGF');
@@ -134,11 +134,12 @@
         let productOptions = document.getElementById('productOptions');
         let addOptions = document.getElementById('addOptions');
 
-
         document.addEventListener("DOMContentLoaded", function () {
             const container = document.getElementById('productOptions');
             const createBlockBtn = document.getElementById('createBlockBtn');
             const addInputBtn = document.getElementById('addInputBtn');
+            const RemoveInputBtn = document.getElementById('RemoveInputBtn');
+
             let blockCounter = 1;
 
             createBlockBtn.addEventListener('click', function () {
@@ -157,38 +158,58 @@
                 }
             });
 
+            RemoveInputBtn.addEventListener('click', function () {
+                const blocks = document.querySelectorAll('.input-block');
+                const lastBlock = blocks[blocks.length - 1];
+
+                if (lastBlock) {
+                    productOptions.removeChild(lastBlock);
+                }
+                else {
+                    alert('Сначала создайте блок');
+                }
+            });
+
+            let counterOptions = 2;
             function createBlock() {
+
+                counterOptions = 2;
                 const block = document.createElement('div');
                 block.classList.add('input-block');
                 block.id = `block-${blockCounter}`;
                 block.innerHTML = `<div>
-                                                        <h1>Options</h1>
-                                                        <label>Name</label>
-                                                        <input class="form-control" type="text" name="Options" />
-                                                        <div>
-                                                            <p></p>
-                                                            <input name="postedFile" type="file" class="btn btn-success" />
-                                                            <p></p>
-                                                        </div>
-                                                        <label>Descriptions</label>
-                                                        <input class="form-control" type="text" name="NGFDescriptions" />
-                                                        <h1>Value & Cost </h1>
-                                                        <div id="Aussen_Innen_ProfilDopel">
-                                                            <div id="valueNGF">
-                                                                <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
-                                                                <span class="input-counter">0</span>
-                                                            </div>
-                                                            <div id="costNGF">
-                                                                <input type="number" id='cost' placeholder="costNGF" step="0.01" name="costNGF" />
-                                                            </div>
+                                                                <h1>Options</h1>
+                                                                <label>Name</label>
+                                                                <input class="form-control" type="text" name="Options" />
+                                                                <div>
+                                                                    <p></p>
+                                                                    <input name="postedFile" type="file" class="btn btn-success" />
+                                                                    <p></p>
+                                                                </div>
+                                                                <label>Descriptions</label>
+                                                                <input class="form-control" type="text" name="NGFDescriptions" />
+                                                                <h1>Value & Cost </h1>
+                                                                <div id="Aussen_Innen_ProfilDopel">
+                                                                    <div id="valueNGF">
+                                                                        <input type="text" placeholder="valueNGF" step="0.01" name="valueNGF" />
 
-                                                        </div>
-                                                    </div>`;
+                                                                    </div>
+                                                                    <div id="costNGF">
+                                                                                <input type="number" id='cost' placeholder="costNGF" id="cost" step="0.01" name="costNGF" />
+                                                                    </div>
+                                                                                <input type="hidden" id="counter" name="input_counter" />
+                                                                </div>
+                                                            </div>`;
+
                 blockCounter++;
+
                 return block;
             }
 
+
+
             function addInputs(block) {
+
                 let d = document.createElement('input');
                 d.setAttribute('name', 'costNGF');
                 d.setAttribute('placeholder', 'costNGF');
@@ -202,27 +223,18 @@
 
                 div1.appendChild(x);
 
-                // Создаем счетчик и добавляем его рядом с инпутом
-                const counterSpan = document.createElement('input');
-                counterSpan.value = '0';
-                counterSpan.classList.add('input-counter');
-                counterSpan.setAttribute('name', 'input_counter');
-                div1.appendChild(counterSpan);
-
                 div2.appendChild(d);
 
-                // Обновляем счетчик инпутов
-                updateInputCounter(block);
-            }
+                var counter = document.querySelectorAll('#counter');
+                counter[counter.length - 1].value = counterOptions;
 
-            function updateInputCounter(block) {
-                const inputCounter = block.querySelectorAll('.input-counter').length;
-                const counters = block.querySelectorAll('.input-counter');
-                counters.forEach(counter => {
-                    counter.value = inputCounter;
-                });
-            }
-        });
+                counterOptions++;
+
+                console.log(counterOptions);
+
+            };
+
+        })
 
         function interfaice() {
             sum.forEach((item) => {
@@ -236,8 +248,8 @@
 
             })
         }
-        interfaice();
 
+        interfaice();
 
     </script>
 }
