--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/ProductHebel.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/ProductHebel.cshtml
@@ -1,4 +1,4 @@
-﻿@model schliessanlagen_konfigurator.Models.Halbzylinder.Profil_Halbzylinder;
+﻿@model schliessanlagen_konfigurator.Models.Hebel;
 
 @{
     ViewData["Title"] = $"ProductHebel/{Model.Id}";
