--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/System_Auswählen.cshtml
@@ -4,9 +4,7 @@
 @{
     ViewData["Title"] = $"System_Auswählen/{Model.userKey}";
 }
-@Html.HiddenFor(m => m.userKey)
 
- 
     <div>
         <h3>
             System auswählen
@@ -22,47 +20,159 @@
 
         <div id="ExelMenu">
     <form asp-action="System_Auswählen" method="post" enctype="multipart/form-data" asp-controller="Konfigurator">
+        @Html.HiddenFor(m => m.userKey)
+       
+        @if (ViewBag.a != null && ViewBag.b == null && ViewBag.DK == null && ViewBag.DH == null)
+        {
+            foreach (var item in ViewBag.a)
+            {
 
-                @if (ViewBag.a != null )
-                {
-                    foreach (var item in ViewBag.a)
-                    {
-                        <div id="ExelItem">
-                            <div id="productImage">
-                                <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
-                            </div>
-                            <div id="productMenuInfo">
-                                <div id="ProductNameUndCost">
+                <div id="ExelItem">
+                    <div id="productImage">
+                        <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                    </div>
+                    <div id="productMenuInfo">
+                        <div id="ProductNameUndCost">
 
-                                    <div>
-                                        <h3>@item.Name</h3>
-                                    </div>
-
-                                    <div style="margin-left: auto;">
-                                        <h4 id="cost">ab @item.Cost €</h4>
-                                    </div>
-                                   
-                                </div>
-
-                                <div id="product_desciptions">
-                                    <h5>@item.description</h5>
-                                </div>
-                                <div id="productChek">
-                                <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { param1 = item.Id, param2 = item.userKey.userKey })">WÄHLEN</a>
-                                </div>
+                            <div>
+                                <h3>@item.Name</h3>
                             </div>
 
-                           
+                            <div style="margin-left: auto;">
+                                <h4 id="cost">ab @item.Cost €</h4>
+                            </div>
+
                         </div>
-                    }
-                }
 
-            </form>
+                        <div id="product_desciptions">
+                            <h5>@item.description</h5>
+                        </div>
+                        <div id="productChek">
+
+                           <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item.Id , param2 = item.userKey})">WÄHLEN</a>
+
+                        </div>
+                    </div>
+
+
+                </div>
+            }
+        }
+        @if (ViewBag.a != null && ViewBag.DH != null)
+        {
+            foreach (var item in ViewBag.a)
+            {
+
+                <div id="ExelItem">
+                    <div id="productImage">
+                        <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                    </div>
+                    <div id="productMenuInfo">
+                        <div id="ProductNameUndCost">
+
+                            <div>
+                                <h3>@item.Name</h3>
+                            </div>
+
+                            <div style="margin-left: auto;">
+                                <h4 id="cost">ab @item.Cost €</h4>
+                            </div>
+
+                        </div>
+
+                        <div id="product_desciptions">
+                            <h5>@item.description</h5>
+                        </div>
+                        <div id="productChek">
+
+                            <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item.Id , param2 = item.userKey,Halb = item?.cheked3})">WÄHLEN</a>
+
+                        </div>
+                    </div>
+
+
+                </div>
+            }
+        }
+        @if (ViewBag.a != null && ViewBag.DK!= null)
+        {
+            foreach (var item in ViewBag.a)
+            {
+
+                <div id="ExelItem">
+                    <div id="productImage">
+                        <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                    </div>
+                    <div id="productMenuInfo">
+                        <div id="ProductNameUndCost">
+
+                            <div>
+                                <h3>@item.Name</h3>
+                            </div>
+
+                            <div style="margin-left: auto;">
+                                <h4 id="cost">ab @item.Cost €</h4>
+                            </div>
+
+                        </div>
+
+                        <div id="product_desciptions">
+                            <h5>@item.description</h5>
+                        </div>
+                        <div id="productChek">
+
+                            <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item.Id , param2 = item.userKey,KnayfID = item?.cheked2})">WÄHLEN</a>
+
+                        </div>
+                    </div>
+
+
+                </div>
+            }
+        }
+        @if (ViewBag.a != null && ViewBag.b != null)
+        {
+            foreach (var item in ViewBag.a)
+            {
+
+                <div id="ExelItem">
+                    <div id="productImage">
+                        <img decoding="async" style="border: 2px solid rgba(237,237,237,0.5);" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="300px" height="300px" />
+                    </div>
+                    <div id="productMenuInfo">
+                        <div id="ProductNameUndCost">
+
+                            <div>
+                                <h3>@item.Name</h3>
+                            </div>
+
+                            <div style="margin-left: auto;">
+                                <h4 id="cost">ab @item.Cost €</h4>
+                            </div>
+
+                        </div>
+
+                        <div id="product_desciptions">
+                            <h5>@item.description</h5>
+                        </div>
+                        <div id="productChek">
+
+                            <a class="btn btn-danger" id="chekProduct" name="DopelId" href=" @Url.Action("OrdersKey", "Konfigurator", new { DopelId = item?.Id , param2 = item.userKey,KnayfID = item?.cheked2, Halb = item?.cheked3,Hebel = item?.cheked4,Vorhan = item?.cheked5,Aussen= item?.cheked6})">WÄHLEN</a>
+
+                        </div>
+                    </div>
+
+
+                </div>
+            }
+        }
+    </form>
                 <input type="submit" value="Create Exel" id="closeMenu" class="btn btn-dark" />
          
         </div>
 
  <script>
+  
             // let generics = document.getElementById('generations');
             // let generic = document.getElementById('generic');
             // let dopel = document.querySelectorAll('#dopel');
